client/css/layout.css
/* ... */
.inputselect select option{
  background-color: var(--modalBackgroundColor);
  font-size: 16px;
}
.inputcheckbox label,
.inputcolor label,
.inputswitch label{
  cursor: pointer;
  margin: 0px 0 0 0;
  font-size: 16px;
  line-height: 20px;
  padding: 8px 5px;
  flex-grow: 1;
}
.inputcheckbox label,
.inputcolor label{
  order: 2;
}

.inputcolor input {
  -webkit-appearance: none;
  -moz-appearance: none;
  border-radius: 4px;
  display: inline-block;
  margin: 3px 3px 0 8px;
  padding: 0;
  width: 30px;
  height: 30px;
  border: 2px solid rgba(255, 255, 255, 0.25);
  order: 1;
  flex-grow: 0;
  flex-shrink: 0;
}
.inputcolor input::-webkit-color-swatch-wrapper {
  padding: 0;
  border: 0 none transparent;
}
.inputcolor input::-webkit-color-swatch {
  border-radius: 4px;
}
.inputcolor input::-moz-color-swatch-wrapper {
  padding: 0;
  border: 0 none transparent;
}
.inputcolor input::-moz-color-swatch  {
  border-radius: 4px;
}
.inputswitch{
  flex-direction: row;
}
.inputswitch input{
  position: absolute;
  top: -50000px;
}

.inputswitch label.switchbox {
  font-size: 0px;
  line-height: 0px;
  height: 28px;
  width: 40px;
  flex-grow: 0;
  flex-shrink: 0;
  margin: 4px;
  padding: 0 5px;
  position: relative;
}
label.switchbox{
  background: gray;
  border-radius: 100px;
  transition-property: all;
  transition-duration: 0.15s;
  transition-delay: 0;
}
label.switchbox::before {
  display: inline-block;
  position: absolute;
  left: 0;
  color: white;
  content: 'w';
  background: white;
  border-radius: 100px;
  font-size: 0px;
  line-height: 0px;
  height: 24px;
  width: 24px;
  margin-top: 2px;
  margin-left: 2px;
  transition-property: all;
  transition-duration: 0.15s;
  transition-delay: 0;
  box-shadow: 0 0 3px black;
}

input.switchbox + label.switchbox::before {
  margin-left: 2px;
  background-color: #ffffff;
}

input.switchbox[type="checkbox"]:checked + .switchbox::before {
  margin-left: 24px;
  background-color: #ffffff;
}
input.switchbox[type="checkbox"]:checked + .switchbox{
  background-color: var(--VTTblue);
}
input:invalid{
  color: red;
}
input:invalid+span:after {
  font-family: 'Material Icons';
  content: 'error';
  position: absolute;
  right: 5px;
  top: 0px;
  font-size: 1.5rem;
  color: red;
  letter-spacing: -1px;
}
.inputpalette > div{
  display: flex;
  flex-wrap: wrap;
  padding: 0 5px;
}
.inputpalette > div input{
  display: none;
}
.inputpalette > div label{
  height: 35px;
  width: 35px;
  display: inline-block;
  border-radius: 8px;
  position: relative;
  border: 3px solid var(--roomColor);
  padding: 0px;
  overflow: hidden;
  
}
.inputpalette > div input[type="radio"]:checked+label{
  border: 3px solid var(--VTTblue);
}
.inputpalette > div input[type="radio"]:checked+label::after{
  font-family: 'Material Icons';
  line-height: 1.25em;
  text-align: center;
  height: 1.25em;
  width: 1.25em;
  background: var(--VTTblue);
  color: white;
  border-radius: 100%;
  border-top-right-radius: 0;
  content: 'check';
  position: absolute;
  top: -3px;
  right: -3px;
  border: 2px solid white;
}
.inputpalette > div label > div{
  display: block;
  content: '';
  position: absolute;
  top: 0px;
  right: 0px;
  bottom: 0px;
  left: 0px;
  position: absolute;
  border: 2px solid white;
  overflow: hidden;
  background-color: inherit;
  border-radius: 5px;
}

